--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,11 @@ body{
     background-color: rgb(0, 0, 0);
     color:rgb(255, 255, 255);
 }
+p{
+    border-top: 2px solid #0066FF;  
+border-bottom: 2px solid #0066FF;  
+border-left: 2px solid #0066FF;  
+border-right: 2px solid #0066FF; 
+background-color:#FFCC33; 
+color: rgb(0, 0, 0);
+}
